--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
    <head>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>To-Do App</title>
+     <!-- Material Design Lite -->
+   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
+   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+ </head>
    </head>
    <body>
-     <h1>To-Do App</h1>
+     <header class="mdl-layout__header-row">
+       <h1>To-Do App</h1>
+     </header>
+     <div class="mdl-layout__header-row">
      <form id="addToDoForm">
-       <label for="newToDoText">New To-Do:</label>
+       <label class="mdl-checkbox" for="newToDoText">New To-Do:</label>
        <input type="text" id="newToDoText">
-       <button type="submit">Add To-Do!</button>
+       <button class="mdl-button" type="submit" id="add">Add To-Do!</button>
      </form>
+   </div>
+   <div class="mdl-layout__header-row" class="mdl-cell mdl-cell--N-col">
+
      <ul id="toDoList">
      </ul>
      <script src="app.js"></script>
+   </div>
+
    </body>
  </html>
