--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
      <header class="mdl-layout__header-row">
        <h1>To-Do App</h1>
      </header>
-     <div class="mdl-layout__header-row">
+     <div class="mdl-layout__row">
      <form id="addToDoForm">
        <label class="mdl-checkbox" for="newToDoText">New To-Do:</label>
        <input type="text" id="newToDoText">
        <button class="mdl-button" type="submit" id="add">Add To-Do!</button>
      </form>
    </div>
-   <div class="mdl-layout__header-row" class="mdl-cell mdl-cell--N-col">
+   <div class="mdl-layout__row" class="mdl-cell mdl-cell--N-col">
 
      <ul id="toDoList">
      </ul>
