--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
      <form id="addToDoForm">
        <label class="mdl-checkbox" for="newToDoText">New To-Do:</label>
        <input type="text" id="newToDoText">
-       <button class="mdl-button" type="submit" id="add">Add To-Do!</button>
+       <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--mini-fab mdl-button--colored" type="submit" id="add">Add To-Do!</button>
      </form>
    </div>
    <div class="mdl-layout__row" class="mdl-cell mdl-cell--N-col">
