--- a/index.html
+++ b/index.html
@@ -3,16 +3,25 @@
    <head>
      <meta name="viewport" content="width=device-width, initial-scale=1">
      <title>To-Do App</title>
-   </head>
+     <!-- Material Design Lite -->
+   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-lime.min.css">
+   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+ </head>
+
    <body>
-     <h1>To-Do App</h1>
+     <header class="mdl-cell">
+       <h1>To-Do App</h1>
+     </header>
+     <div class="mdl-cell">
      <form id="addToDoForm">
-       <label for="newToDoText">New To-Do:</label>
+       <label class="mdl-checkbox" for="newToDoText">New To-Do:</label>
        <input type="text" id="newToDoText">
-       <button type="submit">Add To-Do!</button>
+       <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--accent" type="submit" id="add">Add To-Do!</button>
      </form>
-     <ul id="toDoList">
-     </ul>
+   </div>
+   <ul id="toDoList">
+   </ul>
      <script src="app.js"></script>
+
    </body>
  </html>
